--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
